--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "ityped": "^1.0.3",
+    "photoswipe": "^4.1.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-photoswipe-gallery": "^1.3.10",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.5",
+    "styled-icons": "^10.45.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
